--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>{{ page_title }}</title>
+    <link rel="shortcut icon" href="">
+    <link rel="icon" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/sidebar.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script>const initialMoney = 1500; // TODO</script>
-    <script src="{{ url_for('static',filename='js/sidebar.js') }}"></script>
     <style>
         .dropdown-menu-center {
             left: 50% !important;
@@ -69,6 +69,7 @@
 
             <div id="chatbox">
                 <div id="messages"></div>
+                <label for="msgInput"></label>
                 <input type="text" name="msgInput" id="msgInput" placeholder="Entrez votre message">
             </div>
         </div>
@@ -84,9 +85,7 @@
     </main>
 
 </div>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
 </body>
 </html>
