--- a/templates/layout.html.jinja2
+++ b/templates/layout.html.jinja2
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>{{ page_title }}</title>
-    <link rel="shortcut icon" href="">
-    <link rel="icon" href="">
+    <link rel="shortcut icon" href="{{ url_for('static',filename='css/favicon/favicon.ico') }}">
+    <link rel="icon" href="{{ url_for('static',filename='css/favicon/favicon.ico') }}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/sidebar.css') }}">
