Adding small notifications
TODO: return it from the backend

--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -50,6 +50,7 @@
     </script>
     <script type = "module" src="{{ url_for('static',filename='js/graphics/three.js') }}"></script>
     <script type = "text/javascript" src="{{ url_for('static',filename='js/graphics/cannon.js') }}"></script>
+    <script type = "text/javascript" src="{{ url_for('static',filename='js/notify.js') }}"></script>
     <script type = "module" src="{{ url_for('static',filename='js/graphics/OrbitControls.js') }}"></script>
     <script type = "module" src="{{ url_for('static',filename='js/graphics/dice.js') }}"></script>
     <script type = "module" src="{{ url_for('static',filename='js/sidebar.js') }}"></script>
