--- a/templates/lobby.html.jinja2
+++ b/templates/lobby.html.jinja2
@@ -3,66 +3,7 @@
 
 {% block body %}
     <div id = "container"></div>
-    <style>
-        .slidecontainer {
-            width: 100%; /* Width of the outside container */
-        }
-
-        /* The slider itself */
-        .slider {
-            -webkit-appearance: none;  /* Override default CSS styles */
-            appearance: none;
-            width: 100%; /* Full-width */
-            height: 25px; /* Specified height */
-            background: #d3d3d3; /* Grey background */
-            outline: none; /* Remove outline */
-            opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-            -webkit-transition: .2s; /* 0.2 seconds transition on hover */
-            transition: opacity .2s;
-        }
-
-        /* Mouse-over effects */
-        .slider:hover {
-            opacity: 1; /* Fully shown on mouse-over */
-        }
-
-        /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
-        .slider::-webkit-slider-thumb {
-            -webkit-appearance: none; /* Override default look */
-            appearance: none;
-            width: 25px; /* Set a specific slider handle width */
-            height: 25px; /* Slider handle height */
-            background: #4CAF50; /* Green background */
-            cursor: pointer; /* Cursor on hover */
-        }
-
-        .slider::-moz-range-thumb {
-            width: 25px; /* Set a specific slider handle width */
-            height: 25px; /* Slider handle height */
-            background: #4CAF50; /* Green background */
-            cursor: pointer; /* Cursor on hover */
-        }
-    </style>
-    <script>
-        let gameId = {{ game_id }};
-        let playerId = {{ player_id }};
-        let playerName = "{{ player_name }}";
-    </script>
-    <script type = "module" src="{{ url_for('static',filename='js/graphics/three.js') }}"></script>
-    <script type = "text/javascript" src="{{ url_for('static',filename='js/graphics/cannon.js') }}"></script>
-    <script type = "text/javascript" src="{{ url_for('static',filename='js/notify.js') }}"></script>
-    <script type = "module" src="{{ url_for('static',filename='js/graphics/OrbitControls.js') }}"></script>
-    <script type = "module" src="{{ url_for('static',filename='js/graphics/dice.js') }}"></script>
-    <script type = "module" src="{{ url_for('static',filename='js/sidebar.js') }}"></script>
-    <script type = "module" src="{{ url_for('static',filename='js/graphics/helperFns.js') }}"></script>
-    <script type= "text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <script type="module" src="{{ url_for('static',filename='js/socket.js') }}"></script>
-    <script type="module">
-        // Will be used in the modals to trade
-        import {openPropositionModal, openOfferModal} from '../static/js/socket.js'
-        window.openPropositionModal = openPropositionModal;
-        window.openOfferModal = openOfferModal;
-    </script>
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/lobby.css') }}">
     <!-- MODAL PLAY TURN -->
     <div class="modal fade" id="modalPlayTurn" tabindex="-1" role="dialog" aria-labelledby="modalPlayTurn" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -235,4 +176,25 @@
             </div>
         </div>
     </div>
+    <script>
+        let gameId = {{ game_id }};
+        let playerId = {{ player_id }};
+        let playerName = "{{ player_name }}";
+    </script>
+    <script type = "module" src="{{ url_for('static',filename='js/graphics/three.js') }}"></script>
+    <script type = "text/javascript" src="{{ url_for('static',filename='js/graphics/cannon.js') }}"></script>
+    <script type = "text/javascript" src="{{ url_for('static',filename='js/notify.js') }}"></script>
+    <script type = "module" src="{{ url_for('static',filename='js/graphics/OrbitControls.js') }}"></script>
+    <script type = "module" src="{{ url_for('static',filename='js/graphics/dice.js') }}"></script>
+    <script type = "module" src="{{ url_for('static',filename='js/sidebar.js') }}"></script>
+    <script type = "module" src="{{ url_for('static',filename='js/graphics/helperFns.js') }}"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+    <script type="module" src="{{ url_for('static',filename='js/socket.js') }}"></script>
+    <script type="module">
+        // Will be used in the modals to trade
+        import {openPropositionModal, openOfferModal} from '../static/js/socket.js'
+        window.openPropositionModal = openPropositionModal;
+        window.openOfferModal = openOfferModal;
+    </script>
+
 {% endblock %}
